added more tests for wider coverage and README
